@@ -16,21 +16,36 @@ function getFiles(id) {
       .post("http://localhost:80/api/getFiles.php", { subsession_id: id })
       .then((response) => {
         setFiles(response.data);
-        console.log(response.data);
       })
       .catch((err) => console.log(err));
   }
 
 return (
 <div>
-    {/* {typeof files} */}
-    { files != "" && files.length > 0 ? 
-    files.map((file, key) => (
-      <div key={file.id}>
-        <small>{file.file_name}</small>                
-        </div>
-    ))
-    : <div>No files uploaded yet.</div> }
+    
+  { files != "" && files.length > 0 ? 
+  <div>
+    <table>
+    <tbody>
+      {files.map((file, key) => (
+        <tr className="filelist" key={file.file_id}>
+          <td className="filename">{file.file_name}</td>
+          <td className="btnContainer">
+            <button className="button" type="submit" name="submit" >
+              🗂
+            </button>
+            <button className="button" type="submit" name="submit" >
+              🗑
+            </button>
+          </td>             
+        </tr>
+        ))}
+    </tbody>
+    </table>
+  </div>
+  
+  
+  : <div>No files uploaded yet.</div> }
 </div>
 )
 }
